manifests/services/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  namespace: jellyfin
  labels:
    environment: intern
    app: jellyfin
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.0.0/16
    hajimari.io/enable: "true"
    hajimari.io/icon: "multimedia"
spec:
  tls:
    - hosts:
        - jellyfin.domain.tld
  rules:
    - host: jellyfin.domain.tld
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: jellyfin-service
                port:
                  number: 8096
